{f[path]})PYEOF
bash: line 34: warning: here-document at line 1 delimited by end-of-file (wanted `PYEOF')
  File "<stdin>", line 33
    print(f {f[name]} -
         ^
SyntaxError: '(' was never closed
